// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Checkbox renders a custom indicator 1`] = `
<div>
  <span
    class="group/fui-checkbox"
    data-label-position="after"
    data-size="medium"
  >
    <input
      class=""
      id="checkbox-_r_e_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class=""
    >
      <span
        id="indicator"
      />
    </div>
    <label
      class="group/fui-label"
      data-size="medium"
      for="checkbox-_r_e_"
    >
      Custom indicator
    </label>
  </span>
</div>
`;

exports[`Checkbox renders a default state 1`] = `
<div>
  <span
    class="group/fui-checkbox"
    data-label-position="after"
    data-size="medium"
  >
    <input
      class=""
      id="checkbox-_r_a_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class=""
    />
  </span>
</div>
`;

exports[`Checkbox renders checked 1`] = `
<div>
  <span
    class="group/fui-checkbox"
    data-checked="true"
    data-label-position="after"
    data-size="medium"
  >
    <input
      checked=""
      class=""
      id="checkbox-_r_c_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class=""
    >
      <svg
        aria-hidden="true"
        class="fui-Icon"
        data-fui-icon=""
        fill="currentColor"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.76 3.2c.3.29.32.76.04 1.06l-4.25 4.5a.75.75 0 0 1-1.08.02L2.22 6.53a.75.75 0 0 1 1.06-1.06l1.7 1.7L8.7 3.24a.75.75 0 0 1 1.06-.04"
          fill="currentColor"
        />
      </svg>
    </div>
    <label
      class="group/fui-label"
      data-size="medium"
      for="checkbox-_r_c_"
    >
      Checked Checkbox
    </label>
  </span>
</div>
`;

exports[`Checkbox renders mixed 1`] = `
<div>
  <span
    class="group/fui-checkbox"
    data-indeterminate="true"
    data-label-position="after"
    data-size="medium"
  >
    <input
      class=""
      id="checkbox-_r_d_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class=""
    >
      <svg
        aria-hidden="true"
        class="fui-Icon"
        data-fui-icon=""
        fill="currentColor"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 4c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <label
      class="group/fui-label"
      data-size="medium"
      for="checkbox-_r_d_"
    >
      Mixed Checkbox
    </label>
  </span>
</div>
`;

exports[`Checkbox renders with a label 1`] = `
<div>
  <span
    class="group/fui-checkbox"
    data-label-position="after"
    data-size="medium"
  >
    <input
      class=""
      id="checkbox-_r_b_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class=""
    />
    <label
      class="group/fui-label"
      data-size="medium"
      for="checkbox-_r_b_"
    >
      Unchecked Checkbox
    </label>
  </span>
</div>
`;
